[tool.poetry]
name = "exchange_rate"
version = "0.1.0"
description = ""
authors = ["migueleichler <migueleichler23@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1"
dynaconf = "^3.1.9"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
